subprojects/swen430/src/test/resources/tests/valid/Print_Valid_13.while
void main() {
    [int] x = [55, 40];
    print x;
}
