subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_6.while
int f({int f} x) {
    return x;
}